@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-03T16:26:46Z",
+  "timestamp" : "2022-06-07T08:22:42Z",
   "count_outdated" : 270,
   "uniques_outdated" : 160,
-  "count" : 275,
-  "uniques" : 164,
+  "count" : 276,
+  "uniques" : 165,
   "clones" : [
     {
       "timestamp": "2022-05-30T00:00:00Z",
@@ -18,6 +18,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-06-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
