@@ -1,6 +1,6 @@
 {
-  "count": 5,
-  "uniques": 4,
+  "count": 6,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-05-30T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2022-05-31T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-06-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
